Second fix onto language files

--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "sʞɔolᗺ ǝlqqnW",
+    "item.mubbleGroup.mubble_blocks": "sʞɔolᗺ ǝlqqnW",
     "item.mubbleGroup.mubble_item.mubbles": "sɯǝʇI ǝlqqnW",
     "item.mubbleGroup.mubble_costumes": "sǝɯnʇsoƆ ǝlqqnW",
 
