--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Bloques de Mubble",
+    "item.mubbleGroup.mubble_blocks": "Bloques de Mubble",
     "item.mubbleGroup.mubble_item.mubbles": "Objetos de Mubble",
     "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
 
