--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Blocs Mubble",
+    "item.mubbleGroup.mubble_blocks": "Blocs Mubble",
     "item.mubbleGroup.mubble_item.mubbles": "Objets Mubble",
     "item.mubbleGroup.mubble_costumes": "Costumes Mubble",
 
