--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Mubble cubes thingyz",
+    "item.mubbleGroup.mubble_blocks": "Mubble cubes thingyz",
     "item.mubbleGroup.mubble_item.mubbles": "Mubble toyz",
     "item.mubbleGroup.mubble_costumes": "Mubble put things on you for no reazon lol",
 
