--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Mubble blokken",
+    "item.mubbleGroup.mubble_blocks": "Mubble blokken",
     "item.mubbleGroup.mubble_item.mubbles": "Mubble voorwerpen",
     "item.mubbleGroup.mubble_costumes": "Mubble kostuums",
 
