--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Blocos de Mubble",
+    "item.mubbleGroup.mubble_blocks": "Blocos de Mubble",
     "item.mubbleGroup.mubble_item.mubbles": "Itens de Mubble",
     "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
 
