--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Mubble-Blöcke",
+    "item.mubbleGroup.mubble_blocks": "Mubble-Blöcke",
     "item.mubbleGroup.mubble_item.mubbles": "Mubble-Gegenstände",
     "item.mubbleGroup.mubble_costumes": "Mubble-Kostüme",
 
