--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "Mubble block.mubbles",
+    "item.mubbleGroup.mubble_blocks": "Mubble blocks",
     "item.mubbleGroup.mubble_item.mubbles": "Mubble item.mubbles",
     "item.mubbleGroup.mubble_costumes": "Mubble Costumes",
 
