--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "blauc Mubble",
+    "item.mubbleGroup.mubble_blocks": "blauc Mubble",
     "item.mubbleGroup.mubble_item.mubbles": "trucs Mubble",
     "item.mubbleGroup.mubble_costumes": "costum Mubble",
 
