--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "任天堂领域方块",
+    "item.mubbleGroup.mubble_blocks": "任天堂领域方块",
     "item.mubbleGroup.mubble_item.mubbles": "任天堂领域物品",
     "item.mubbleGroup.mubble_costumes": "任天堂领域时装",
 
