--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
     //CREATIVE TABS
-    "item.mubbleGroup.mubble_block.mubbles": "任天堂領域方塊",
+    "item.mubbleGroup.mubble_blocks": "任天堂領域方塊",
     "item.mubbleGroup.mubble_item.mubbles": "任天堂領域物品",
     "item.mubbleGroup.mubble_costumes": "任天堂領域時裝",
 
